# AliveMonitor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  readme_de.md  readme_es.md  readme_fr.md  readme_it.md
arduino/AliveMonitor/: AliveMonitor.ino
controller/: CommandController.cpp  CommandController.h  CsvLoggerController.cpp  CsvLoggerController.h  GraphController.cpp  GraphController.h  MainController.cpp  MainController.h  SerialController.cpp  SerialController.h  TimedOutputController.cpp  TimedOutputController.h
docs/: Architecture.md  CMakeGUI.md  Protocol.md  Translations.md
docs/UML/: ClassDiagram.md  ClassDiagram.puml  SequenceDiagrams.puml
i18n/: Strings.cpp  Strings.h
include/: AppEvents.h  CpuMonitor.h  IUserActions.h  Language.h  Version.h
installer/: AliveMonitor.iss
model/: AnalogDataBuffer.cpp  AnalogDataBuffer.h  AppSettings.cpp  AppSettings.h  BoardState.cpp  BoardState.h  ChannelCalibration.h  ChannelConfigFile.cpp  ChannelConfigFile.h  CommunicationProtocol.cpp  CommunicationProtocol.h  DigitalOutputState.cpp  DigitalOutputState.h  RingBuffer.h  SerialModel.cpp  SerialModel.h
resources/: AliveMonitor.rc  AliveMonitor.xpm  HelpContent.h  README.md
scripts/: package-linux.sh  package-windows.ps1  setup-wxwidgets.bat  setup-wxwidgets.ps1  setup-wxwidgets.sh
serial/: ISerialPort.h  SerialPortPosix.cpp  SerialPortPosix.h  SerialPortWindows.cpp  SerialPortWindows.h
src/: AppEvents.cpp  CpuMonitor.cpp  main.cpp
tests/: TestFramework.h  main.cpp  test_board_state.cpp  test_channel_calibration.cpp  test_communication_protocol.cpp  test_ring_buffer.cpp
view/: AcquisitionPanel.cpp  AcquisitionPanel.h  CalibrationPanel.cpp  CalibrationPanel.h  DigitalOutputPanel.cpp  DigitalOutputPanel.h  GraphPanel.cpp  GraphPanel.h  LanguageSelectDialog.cpp  LanguageSelectDialog.h  LedIndicator.cpp  LedIndicator.h  MainFrame.cpp  MainFrame.h  OptionsPanel.cpp  OptionsPanel.h  SettingsDialog.cpp  SettingsDialog.h  SplashScreen.cpp  SplashScreen.h  StatusPanel.cpp  StatusPanel.h  ToolbarPanel.cpp  ToolbarPanel.h
